<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"

    >

    <ImageView
        android:src="@mipmap/ic_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeDesc"
        android:layout_below="@id/logo"
        android:textAlignment="center"
        android:layout_marginTop="80dp"
        android:textColor="@color/textPrimary"
        android:textSize="15sp"
        android:id="@+id/homeDesc"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeBtn1"
        android:layout_centerInParent="true"
        android:id="@+id/homeBtn1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeBtn1"
        android:layout_centerHorizontal="true"
        android:text="@string/homeBtn2"
        android:textSize="10sp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/homeBtn2"

/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Copyright"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textSize="10sp"
        android:textColor="@color/textPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
/>






</RelativeLayout>