<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LaunchActivity"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    >

    <ImageView
        android:src="@mipmap/ic_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/launchTitle"
        android:text="@string/launchTitle"
        android:textColor="@color/primaryColor"
        android:layout_below="@+id/logo"
        android:layout_marginTop="40dp"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/launchTxt"
        android:textColor="@color/textPrimary"
        android:text="@string/launchTxt"
        android:layout_below="@+id/launchTitle"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/launchTxt"
        android:text="@string/launchBtn"
        android:textColor="@color/secondaryColor"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:id="@+id/test"
        />

</RelativeLayout>